Working tree without restrictions